--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,5 @@
 {
-   // Use IntelliSense to find out which attributes exist for C# debugging
+   // Use IntelliSense to find out which attributes exist for C# Lab_6
    // Use hover for the description of the existing attributes
    // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
    "version": "0.2.0",
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/Lab_3/bin/Debug/netcoreapp3.1/Lab_3.dll",
+            "program": "${workspaceFolder}/Lab 6/bin/Debug/netcoreapp3.1/Lab 6.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/Lab_3",
+            "cwd": "${workspaceFolder}/Lab 6",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
             "stopAtEntry": false
